test/classes/nilability/error-assigning-to-nil.good
error-assigning-to-nil.chpl:3: In function 'main':
error-assigning-to-nil.chpl:6: error: cannot assign to unmanaged MyClass from nil
